lib/rl_bindings.h

FilePathList *LoadDirectoryFiles_(char *a);
FilePathList *LoadDirectoryFilesEx_(char *a, char *b, int c);
void UnloadDirectoryFiles_(FilePathList *a);
FilePathList *LoadDroppedFiles_();
void UnloadDroppedFiles_(FilePathList *a);
Vector2 *GetMousePosition_();
Vector2 *GetMouseDelta_();
Vector2 *GetMouseWheelMoveV_();
Vector2 *GetTouchPosition_(int a);
Vector2 *GetGestureDragVector_();
Vector2 *GetGesturePinchVector_();
void SetShapesTexture_(Texture *a, Rectangle *b);
void DrawPixel_(int a, int b, Color *c);
void DrawPixelV_(Vector2 *a, Color *b);
void DrawLine_(int a, int b, int c, int d, Color *e);
void DrawLineV_(Vector2 *a, Vector2 *b, Color *c);
void DrawLineEx_(Vector2 *a, Vector2 *b, float c, Color *d);
void DrawLineBezier_(Vector2 *a, Vector2 *b, float c, Color *d);
void DrawLineBezierQuad_(Vector2 *a, Vector2 *b, Vector2 *c, float d, Color *e);
void DrawLineBezierCubic_(Vector2 *a, Vector2 *b, Vector2 *c, Vector2 *d, float e, Color *f);
void DrawLineStrip_(Vector2 *a, int b, Color *c);
void DrawCircle_(int a, int b, float c, Color *d);
void DrawCircleSector_(Vector2 *a, float b, float c, float d, int e, Color *f);
void DrawCircleSectorLines_(Vector2 *a, float b, float c, float d, int e, Color *f);
void DrawCircleGradient_(int a, int b, float c, Color *d, Color *e);
void DrawCircleV_(Vector2 *a, float b, Color *c);
void DrawCircleLines_(int a, int b, float c, Color *d);
void DrawEllipse_(int a, int b, float c, float d, Color *e);
void DrawEllipseLines_(int a, int b, float c, float d, Color *e);
void DrawRing_(Vector2 *a, float b, float c, float d, float e, int f, Color *g);
void DrawRingLines_(Vector2 *a, float b, float c, float d, float e, int f, Color *g);
void DrawRectangle_(int a, int b, int c, int d, Color *e);
void DrawRectangleV_(Vector2 *a, Vector2 *b, Color *c);
void DrawRectangleRec_(Rectangle *a, Color *b);
void DrawRectanglePro_(Rectangle *a, Vector2 *b, float c, Color *d);
void DrawRectangleGradientV_(int a, int b, int c, int d, Color *e, Color *f);
void DrawRectangleGradientH_(int a, int b, int c, int d, Color *e, Color *f);
void DrawRectangleGradientEx_(Rectangle *a, Color *b, Color *c, Color *d, Color *e);
void DrawRectangleLines_(int a, int b, int c, int d, Color *e);